fix. alignment multi-line todo text

--- a/css/style.css
+++ b/css/style.css
@@ -322,7 +322,7 @@ ion-icon {
     border-bottom: 1px solid #909090;
     padding: 2.5vh 2vw 1vh 2vw;
     list-style: none;
-    text-indent: -2vw;
+    text-indent: -3vw;
     text-decoration-color: #00000077;
     text-decoration-thickness: 0.3rem;
 }
